# RayTracing

./: CMakeLists.txt  README.md  REDAME.md
Examples/: CMakeLists.txt  JumpingBalls.cpp  VirusCell.cpp
src/: main.cpp
src/Engine/Camera/: Camera.cpp  Camera.h
src/Engine/Light/: Light.h
src/Engine/Object/: Object.h
src/Engine/Scene/: Scene.cpp  Scene.h
src/Engine/Shape/: Ellipsoid.cpp  Ellipsoid.h  Interface.h
src/Engine/SkyBox/: GradientSky.h  SkyBox.h
src/math/: color.cpp  color.h  geometry.h
